deployment-es.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  selector:
    matchLabels:
      run: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        run: elasticsearch
    spec:
      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
          name: elasticsearch
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 9300
            name: nodes
          - containerPort: 9200
            name: client
